# pirv-gauss

./: CMakeLists.txt  lab.cpp  main.cpp  readme.md  source.cpp
